--- a/blog.html
+++ b/blog.html
@@ -455,7 +455,7 @@ z-index: 3;
 </p>
 </div>
 <div onselectstart="return false" id="menu1-2">
-　　　　　　<a href="https://poofties.middlepot.com" target="_blank" style="text-decoration: none; color:#8c7d75;">poofties</a>
+　　　　　　<a href="https://poofties.club" target="_blank" style="text-decoration: none; color:#8c7d75;">poofties</a>
 </div>
 
 <div id="menu2">
@@ -494,7 +494,7 @@ font-family: Verdana;
 <br>
 hiii fluffies <sub>🎀</sub><br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
 how is 2022 going for you, so far ?
-it’s been great for me, since i finally got some rest after so much work for the holidays events on <a id="linkbjinho" href="https://myfluffy.life" target="_blank">my game</a>, and sales on <a id="linkbjinho" href="https://shybunny.middlepot.com" target="_blank">my store</a> .. !
+it’s been great for me, since i finally got some rest after so much work for the holidays events on <a id="linkbjinho" href="https://myfluffy.life" target="_blank">my game</a>, and sales on <a id="linkbjinho" href="https://shybunny.store" target="_blank">my store</a> .. !
 i tried to keep doing my important tasks, but also got plenty of days off for myself, because it was really needed.
 i don’t really make new year's resolutions, but i like to take the time for valuing my life as it is, plan solutions for my current bothers, and reorganize my schedule.
 
@@ -729,7 +729,7 @@ all posts has to be painfully adapted to each platform particularities ( which r
 yes, i can't possibly avoid all the issues unless i stop using these platforms as a whole, but i can avoid myself from getting upset about many things on a daily basis - i have to make an effort to think about the issues that numbers cause, instead of being reminded of them all the time.
 this is good enough for now, i’m proud of my efforts for the time being !!
 
-i will keep trying my best to create content for now, even with all limitations, because i need these social platforms for reaching people and keeping contact with the <a id="linkbjinho" href="https://poofties.middlepot.com" target="_blank">poofties</a> community. i know i don't post a lot, and i apologize for that .. it is very hard for me, but i know you fluffies are looking forward to the content i post on my accounts. i want to inspire & comfort you all, so i try to keep going, as i can. <sub>🦋</sub>
+i will keep trying my best to create content for now, even with all limitations, because i need these social platforms for reaching people and keeping contact with the <a id="linkbjinho" href="https://poofties.club" target="_blank">poofties</a> community. i know i don't post a lot, and i apologize for that .. it is very hard for me, but i know you fluffies are looking forward to the content i post on my accounts. i want to inspire & comfort you all, so i try to keep going, as i can. <sub>🦋</sub>
 once i can release my puf café project, finish working on the puf bot, i hope to finally free myself and be able to post content in a safe place where i can do things as i like <font color="#d3a5a5" style="font-size:11px;">♡</font>
 ( i will share more detailed information about those projects in future posts ! )
 
@@ -887,7 +887,7 @@ i am grateful that 99% of the people i encounter are kindred spirits, absolutely
 
 i decided to give us a break,, not only in the sense of taking days off from time to time ( as every human being deserves ) but also allow ourselves to take more than a few hours to respond to messages, and fix bugs.
 with time and experience, the game will become a lot more stable ( it already is, 95% of the bug list is gone, and i haven't received any new complains these last days ) and of course this time of the year is stressful for everyone, because of the holidays, so i am okay with working extra hard for releasing events accordingly ( it means a lot to me, and makes everyone happy too ) !
-but i have also been getting more orders for the <a id="linkbjinho" href="https://shybunny.middlepot.com" target="_blank">shy bunny store</a>, i have side projects to work on, and .. a life, personal interests, friends, hobbies <sub>🚲</sub>
+but i have also been getting more orders for the <a id="linkbjinho" href="https://shybunny.store" target="_blank">shy bunny store</a>, i have side projects to work on, and .. a life, personal interests, friends, hobbies <sub>🚲</sub>
 i believe i am responsible enough for being able to keep up with everything, i try my best to organize my schedule for taking time to everything i want to do, being it once a day, week or month.
 the only thing that is stressing me extra is the amount of messages, since the game is growing more & more each week ( which makes me really happy, it is a dream coming true <font color="#d3a5a5" style="font-size:11px;">♡</font> ) but my weeks don't have more hours in it.
 i am taking away my resting time for trying to keep being perfectly prompt, and i shouldn't !! things are not the same as they were years ago, or even months ago. i am the same person, but i have loads of work i didn't have back then.
@@ -1077,7 +1077,7 @@ this autumn you are asked to donate for helping the cotton-floof villagers to ma
 we have a lot to improve on that system yet, since we realized that some players are super rich and will reach the needed amount in the spam of a few hours .. and everyone deserves a chance to get prizes !
 but that's a thing to improve for the next crowd fundings, it is good enough for our first try.
 
-before those events, right after we released my fluffy life, we were working on the <a id="linkbjinho" href="https://poofties.middlepot.com/account" target="_blank">poofties account home page</a> , that is a place on the poofties website where you can manage your account and set up integrations with all the projects related :
+before those events, right after we released my fluffy life, we were working on the <a id="linkbjinho" href="https://poofties.club/account" target="_blank">poofties account home page</a> , that is a place on the poofties website where you can manage your account and set up integrations with all the projects related :
 </pre>
 <br><br>
 
@@ -1095,7 +1095,7 @@ the concept of dynamic websites that look as cute as my regular static websites 
 i'm sorry but i just love working with html so much .. i can't wait to work on other web projects ( we also have to finish the browser version of the game, mhm )
 
 at the moment you don't have a lot of integrations prepared to make use of, but i have a big list of things to work on, and i can only promise that next year will be really exciting !
-the most interesting thing you can do on the poofties account integration right now is setting up your virtual collection of felted fluffies, from the <a id="linkbjinho" href="https://shybunny.middlepot.com" target="_blank">shy bunny store</a>.
+the most interesting thing you can do on the poofties account integration right now is setting up your virtual collection of felted fluffies, from the <a id="linkbjinho" href="https://shybunny.store" target="_blank">shy bunny store</a>.
 once you add a felted fluffy code there, you automatically get a stuffie + stickers on the my fluffy life account :
 </pre>
 <br><br>
@@ -1162,7 +1162,7 @@ because of her drawing and her interest in mushrooms, i had an idea for my fluff
 that just reminded me of when we made a little art trade, some months ago, and we drew each other's kitty characters <sub>🐈</sub>
 i may have forgot to show you fluffies, but better late than never !
 
-on the left there is my kitty puf from the <a id="linkbjinho" href="https://poofties.middlepot.com/series" target="_blank">poofties series</a>, and on the right her version of it :
+on the left there is my kitty puf from the <a id="linkbjinho" href="https://poofties.club/series" target="_blank">poofties series</a>, and on the right her version of it :
 </pre>
 <br>
 
@@ -1425,7 +1425,7 @@ everything is so cute, and now you can make your own custom felted fluffy friend
 </pre>
 <br><br>
 
-<center><a href="https://shybunny.middlepot.com" target="_blank"><img width="400px" height="auto" src="https://i.imgur.com/BzMuWPB.gif"/></a></center>
+<center><a href="https://shybunny.store" target="_blank"><img width="400px" height="auto" src="https://i.imgur.com/BzMuWPB.gif"/></a></center>
 <br>
 
 </font></font></font>
@@ -1947,14 +1947,14 @@ i wanted to make a separate website for the poofties brand for quite some time, 
 </pre>
 <br><br>
 
-<center><a href="https://poofties.middlepot.com" target="_blank"><img width="430px" height="auto" src="https://i.imgur.com/9z3G2uS.gif"/></a></center>
+<center><a href="https://poofties.club" target="_blank"><img width="430px" height="auto" src="https://i.imgur.com/9z3G2uS.gif"/></a></center>
 
 
 </font></font></font>
 
 <font size = 1><font color="#B1A69E">
 <br><br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
-on <a id="linkbjinho" href="https://poofties.middlepot.com" target="_blank">poofties.middlepot.com</a> you can access all projects related directly to the poofties, and i already kept a link for the "puf bot" website that i'll be making soon ( yes, the bot will not be actually made for discord.. but i'm not giving spoilers of this project today ) <sub>💻</sub>
+on <a id="linkbjinho" href="https://poofties.club" target="_blank">poofties.club</a> you can access all projects related directly to the poofties, and i already kept a link for the "puf bot" website that i'll be making soon ( yes, the bot will not be actually made for discord.. but i'm not giving spoilers of this project today ) <sub>💻</sub>
 as always, i'll keep posting relevant poofties content here on this blog, but please make sure to visit the poofties site as well !
 
 talking on poofties, i remade and renamed my font that i use for some content ( including "my fluffy life" , story templates titles , etc ) ..
@@ -2365,7 +2365,7 @@ this month i spent most of the time drawing & editing, and i am honestly very pr
 i decided that this year i would work extra hard on my dreams, since i have looots of small dreams.. it's time to do what i can for reaching them.
 one of them was making stationery with my drawings, but i wasn't very satisfied with them yet, so i tried improving on that.
 in the end, i managed to make 3 different sets that i really like !! <font color="#d3a5a5" style="font-size:11px;">♡</font>
-you can purchase those letter writing and sticker sets on the <a id="linkbjinho" href="https://shybunny.middlepot.com/stationery" target="_blank">shy bunny store</a>
+you can purchase those letter writing and sticker sets on the <a id="linkbjinho" href="https://shybunny.store/stationery" target="_blank">shy bunny store</a>
 </pre>
 <br><br>
 
@@ -2438,7 +2438,7 @@ i don't want anyone to be left behind just for not having a pc .. to make sure m
 i hope you mobile users are now able to see my content properly <font color="#d3a5a5" style="font-size:11px;">♡</font>
 
 other important thing : rip flash .. but really ? <sub>⚰️</sub>
-remember that you can download all of my flash games on the <a id="linkbjinho" href="https://poofties.middlepot.com/games" target="_blank">milky woods</a> page !!
+remember that you can download all of my flash games on the <a id="linkbjinho" href="https://poofties.club/games" target="_blank">milky woods</a> page !!
 the pack is now updated with a super necessary extra file : flashplayer32.exe
 if you have .swf files on your pc you probably won't be able to open any of them without this player. i honestly got really desperate when all the options of players i have tried were broken, and no one was talking about it AT ALL
 i did a lot of research and after a few hours i finally found a version of the official flash player ( from 2018 i suppose ) that is working pretty well, because you don't need to install :
