--- a/fashion.html
+++ b/fashion.html
@@ -447,7 +447,7 @@ z-index: 3;
 </p>
 </div>
 <div onselectstart="return false" id="menu1-2">
-　　　　　　<a href="https://poofties.middlepot.com" target="_blank" style="text-decoration: none; color:#8c7d75;">poofties</a>
+　　　　　　<a href="https://poofties.club" target="_blank" style="text-decoration: none; color:#8c7d75;">poofties</a>
 </div>
 
 <div id="menu2">
