--- a/links.html
+++ b/links.html
@@ -448,7 +448,7 @@ z-index: 3;
 </p>
 </div>
 <div onselectstart="return false" id="menu1-2">
-　　　　　　<a href="https://poofties.middlepot.com" target="_blank" style="text-decoration: none; color:#8c7d75;">poofties</a>
+　　　　　　<a href="https://poofties.club" target="_blank" style="text-decoration: none; color:#8c7d75;">poofties</a>
 </div>
 
 <div id="menu2">
@@ -525,9 +525,7 @@ z-index: 3;
 <br>
 <a id="ooo" href="https://teddy.pooftie.me" target="_blank" >stuffie collection</a>
 <br>
-<a id="ooo" href="https://kafra.pooftie.me" target="_blank" >ragnarok scenarios</a>
-<br>
-<a id="ooo" href="https://txt.pooftie.me" target="_blank" >offline ywot</a>
+<a id="ooo" href="https://kafra.pooftie.me" target="_blank" >ragnarok memories</a>
 <br>
 <a id="ooo" href="https://soft.pooftie.me" target="_blank" >???</a>
 <br>
