--- a/poofties.html
+++ b/poofties.html
@@ -45,7 +45,7 @@
 <meta property="twitter:image" content="https://middlepot.com/img/pure.jpg">
 
 <script language= "JavaScript">
-location.href="https://poofties.middlepot.com"
+location.href="https://poofties.club"
 </script>
 
 <style>
@@ -309,7 +309,7 @@ z-index: 3;
 </p>
 </div>
 <div onselectstart="return false" id="menu1-2">
-　　　　　　<a href="https://poofties.middlepot.com" target="_blank" style="text-decoration: none; color:#8c7d75;">poofties</a>
+　　　　　　<a href="https://poofties.club" target="_blank" style="text-decoration: none; color:#8c7d75;">poofties</a>
 </div>
 
 <div id="menu2">
