--- a/recommended.html
+++ b/recommended.html
@@ -451,7 +451,7 @@ z-index: 3;
 </p>
 </div>
 <div onselectstart="return false" id="menu1-2">
-　　　　　　<a href="https://poofties.middlepot.com" target="_blank" style="text-decoration: none; color:#8c7d75;">poofties</a>
+　　　　　　<a href="https://poofties.club" target="_blank" style="text-decoration: none; color:#8c7d75;">poofties</a>
 </div>
 
 <div id="menu2">
@@ -485,52 +485,52 @@ z-index: 3;
 <center><a href="https://web.archive.org/web/20080702000153/http://princessportal.com/the-princess-code/" target="_blank"><img src="https://i.imgur.com/tcl2qna.gif"></a></center>
 <br><br><br>
 
+<a href="https://pompon.neocities.org" target="_blank"><img src="https://i.imgur.com/vaXnzqN.gif"></a>
+　<a href="https://sanhyo.neocities.org" target="_blank"><img src="https://i.imgur.com/VAuDFkt.gif"></a>
+　<a href="https://ratpilled.neocities.org" target="_blank"><img src="https://i.imgur.com/AzvzqGz.gif"></a>
+
+　　‌‌<br><br><a href="http://www.dollhospital.com.br/" target="_blank"><img width="88px" height="35px" src="http://i.imgur.com/CPLYLD2.png"/></a>
 　<a href="http://theprincesschateau.silentears.net" target="_blank"><img src="https://i.imgur.com/58xmjAn.gif"></a>
 　‌‌<a href="https://luupon.art" target="_blank"><img src="https://i.imgur.com/GKo0nYh.png"></a>
-　<a href="https://allyratworld.neocities.org" target="_blank"><img src="https://i.imgur.com/fTCMebo.png"></a>
 
-　　‌‌<br><br>　<a href="https://birdsandstars.neocities.org" target="_blank"><img src="https://i.imgur.com/gfnwIV7.png"></a>
+　　‌‌<br><br><a href="https://allyratworld.neocities.org" target="_blank"><img src="https://i.imgur.com/fTCMebo.png"></a>
 　<a href="https://mimkitty.com" target="_blank"><img src="https://i.imgur.com/6W5CjTW.gif"></a>
-　<a href="https://cloudworld.neocities.org" target="_blank"><img src="https://i.imgur.com/MXRItda.gif"></a>
+　<a href="https://birdsandstars.neocities.org" target="_blank"><img src="https://i.imgur.com/gfnwIV7.png"></a>
 
-　　‌‌<br><br>　<a href="https://dive.kuchiki.net" target="_blank"><img src="https://i.imgur.com/I3JS0NJ.gif"></a>
+　　‌‌<br><br><a href="https://cloudworld.neocities.org" target="_blank"><img src="https://i.imgur.com/MXRItda.gif"></a>
+　<a href="https://dive.kuchiki.net" target="_blank"><img src="https://i.imgur.com/I3JS0NJ.gif"></a>
 　<a href="https://www.lejlart.com/apple.html" target="_blank"><img src="https://i.imgur.com/tHRwo5p.gif"></a>
-　<a href="https://candymilk.neocities.org" target="_blank"><img src="https://i.imgur.com/7iYy1hj.gif"></a>
 
-　　‌‌<br><br>　<a href="https://hishoku-sora.blogspot.com" target="_blank"><img src="https://i.imgur.com/VpojhaF.gif"></a>
+　　‌‌<br><br><a href="https://candymilk.neocities.org" target="_blank"><img src="https://i.imgur.com/7iYy1hj.gif"></a>
+　<a href="https://hishoku-sora.blogspot.com" target="_blank"><img src="https://i.imgur.com/VpojhaF.gif"></a>
 　<a href="https://blissnet.neocities.org" target="_blank"><img src="https://i.imgur.com/m3tcSwl.png"></a>
-　<a href="https://cinni.neocities.org" target="_blank"><img src="https://i.imgur.com/LH4PdzU.png"></a>
 
-　　‌‌<br><br>　<a href="https://chelemige.neocities.org" target="_blank"><img src="https://i.imgur.com/0HaSI7R.gif"></a>
+　　‌‌<br><br><a href="https://cinni.neocities.org" target="_blank"><img src="https://i.imgur.com/LH4PdzU.png"></a>
+　<a href="https://chelemige.neocities.org" target="_blank"><img src="https://i.imgur.com/0HaSI7R.gif"></a>
 　<a href="https://gutz.neocities.org" target="_blank"><img src="https://i.imgur.com/NB1QV8c.gif"></a>
-　<a href="https://nuange.neocities.org/" target="_blank"><img src="https://i.imgur.com/7XobVXo.gif"></a>
-
-　　‌‌<br><br>　<a href="https://teddybear-halo.neocities.org" target="_blank"><img src="https://i.imgur.com/wZIp3Fp.gif"></a>
-　<a href="https://snowy.neocities.org" target="_blank"><img src="https://i.imgur.com/Ja8LCbO.png"></a>
-　<a href="https://valentines.neocities.org" target="_blank"><img src="https://i.imgur.com/j1itU4N.gif"></a>
 
 　　‌‌<br><br>　<a href="https://kyumiare.neocities.org" target="_blank"><img src="https://i.imgur.com/SDbQzIw.png"></a>
 　<a href="https://reia.neocities.org" target="_blank"><img src="https://i.imgur.com/Oo4OZuP.png"></a>
-　<a href="https://melodicake.neocities.org" target="_blank"><img src="https://i.imgur.com/JgeSrkA.gif"></a>
+　<a href="https://nuange.neocities.org/" target="_blank"><img src="https://i.imgur.com/4uYk1i5.gif"></a>
+
+　　‌‌<br><br>　<a href="https://teddybear-halo.neocities.org" target="_blank"><img src="https://i.imgur.com/wZIp3Fp.gif"></a>
+　<a href="https://softheartclinic.neocities.org" target="_blank"><img src="https://i.imgur.com/tQa81Hd.gif"></a>
+　<a href="https://valentines.neocities.org" target="_blank"><img src="https://i.imgur.com/j1itU4N.gif"></a>
 
 　　‌‌<br><br>　<a href="https://web.archive.org/web/20120106190018/http://makipooh.chu.jp/apupu/top.html" target="_blank"><img src="https://i.imgur.com/MPQdxyU.gif"></a>
 <a href="https://angel99.neocities.org" target="_blank"><img src="https://i.imgur.com/DS7h4zO.png"></a>
 <a href="https://farinawvence.blogspot.com" target="_blank"><img src="https://i.imgur.com/dyNNW2I.gif"></a>
 
-　　<br><br><a href="http://web.archive.org/web/20190702185153/https://mimi-dollie.blogspot.com/" target="_blank"><img src="https://i.imgur.com/BCGhvCY.gif"></a>
+　　<br><br><a href="https://web.archive.org/web/20130501011051/http://sao-charin.babymilk.jp/" target="_blank"><img src="https://i.imgur.com/orHAzIJ.gif"></a>
 　<a href="https://www.aniblog.com.mx" target="_blank"><img src="https://i.imgur.com/TYCJqcI.gif"></a>
 　<a href="https://woneland.blogspot.com" target="_blank"><img src="https://i.imgur.com/41vCABt.gif"></a>
 
-　<br><br><a href="https://lovelyxdoll.blogspot.com/" target="_blank"><img src="https://i.imgur.com/KDfAyiF.png"></a>
+　<br><br><a href="https://web.archive.org/web/20090601221008/http://www5.pf-x.net/~car/" target="_blank"><img src="https://i.imgur.com/W97nIbu.gif"></a>
 　<a href="https://web.archive.org/web/20121020180143/http://cheerful.hacca.jp/" target="_blank"><img src="https://i.imgur.com/m4UM3W1.gif"></a>
 　<a href="https://web.archive.org/web/20130517212125/http://susuda.skr.jp/" target="_blank"><img src="https://i.imgur.com/nmVTFnS.gif"></a>
 
-　<br><br><a href="https://web.archive.org/web/20090601221008/http://www5.pf-x.net/~car/" target="_blank"><img src="https://i.imgur.com/W97nIbu.gif"></a>
-　<a href="https://web.archive.org/web/20110716131740/http://hana.poche.jp/angel66l/index.html" target="_blank"><img src="https://i.imgur.com/kzCZCDf.gif"></a>
-　<a href="https://web.archive.org/web/20130501011051/http://sao-charin.babymilk.jp/" target="_blank"><img src="https://i.imgur.com/orHAzIJ.gif"></a>
-
 　<br><br><a href="http://whimsical.heartette.net/" target="_blank"><img src="https://i.imgur.com/Szmjm6A.gif"></a>
-　<a href="http://web.archive.org/web/20190913175901/https://bunnymilku.blogspot.com/" target="_blank"><img src="https://i.imgur.com/ytdhHO6.gif"></a>
+　<a href="https://web.archive.org/web/20110716131740/http://hana.poche.jp/angel66l/index.html" target="_blank"><img src="https://i.imgur.com/kzCZCDf.gif"></a>
 　<a href="https://web.archive.org/web/20090227235121/http://www.lovecandied.com/" target="_blank"><img src="https://i.imgur.com/hUQytvV.gif"></a>
 
 　<br><br><a href="http://bitmapdreams.lastsecret.net/" target="_blank"><img src="https://i.imgur.com/NrB9UB9.gif"></a>
@@ -550,7 +550,7 @@ z-index: 3;
 　<a href="https://web.archive.org/web/20080815042056/http://cherish.silk.to/" target="_blank"><img src="https://i.imgur.com/Z2vfmvm.gif"></a>
 
 　<br><br><a href="https://web.archive.org/web/20111101151554/http://www.mirukuma.com/" target="_blank"><img src="https://i.imgur.com/8jgus9J.gif"></a>
-　　<a href="http://engrampixel.co.vu/" target="_blank"><img src="https://i.imgur.com/eMOOTfI.gif"></a>
+　　<a href="http://web.archive.org/web/20170706161915/http://engrampixel.co.vu/" target="_blank"><img src="https://i.imgur.com/eMOOTfI.gif"></a>
 　　<a href="https://web.archive.org/web/20160616220750/http://www.emirin.com/" target="_blank"><img src="https://i.imgur.com/9jcAUVv.gif"></a>
 
 　<br><br><a href="https://web.archive.org/web/20110728061529/http://susuda.skr.jp/" target="_blank"><img src="https://i.imgur.com/9EvtDb7.gif"></a>
@@ -575,17 +575,30 @@ z-index: 3;
 <br>
 
 <font color="#ADA49C"><center>how to have your site / blog here :</center><br><br></font><font color="#c7b3b8">
-　　　　　<font style="color: #e3baba; text-shadow: 2px 2px #f2e1e1; font-size:11px;">♡</font>　it must have a cute aesthetic and be sfw ;<br>
-　　　　　<font style="color: #e3baba; text-shadow: 2px 2px #f2e1e1; font-size:11px;">♡</font>　send me your button, it should be 88 x 31 px ;<br>
-　　　　　<font style="color: #e3baba; text-shadow: 2px 2px #f2e1e1; font-size:11px;">♡</font>　i also keep here backups of precious inactive sites ;<br>
-　　　　　<font style="color: #e3baba; text-shadow: 2px 2px #f2e1e1; font-size:11px;">♡</font>　feel free to recommend my site, i will be very happy !<br>
-　　　　　<font style="color: #e3baba; text-shadow: 2px 2px #f2e1e1; font-size:11px;">♡</font>　my button ( copy the code ) :<br><br>
+　　　　　<font style="color: #e3d5d5; text-shadow: 2px 2px #f2e1e1; font-size:11px;">♡</font>　it must be drama-free and sfw ;<br>
+　　　　　<font style="color: #e3d5d5; text-shadow: 2px 2px #f2e1e1; font-size:11px;">♡</font>　your button must be rectangular ( preferably 88 x 31 px ) ;<br>
+　　　　　<font style="color: #e3d5d5; text-shadow: 2px 2px #f2e1e1; font-size:11px;">♡</font>　i also keep here backups of some inactive sites ;<br>
+　　　　　<font style="color: #e3d5d5; text-shadow: 2px 2px #f2e1e1; font-size:11px;">♡</font>　feel free to recommend my site, i will be very happy !<br>
+　　　　　<font style="color: #e3d5d5; text-shadow: 2px 2px #f2e1e1; font-size:11px;">♡</font>　this is my button :<br><br>
 </font><br>
 <center><img src="https://middlepot.com/button.png"></center><br>
-<center><textarea style="height:12px; width:55px;  border:1px dotted #ADA49C; -moz-border-radius: 20px;
+<script>
+function copyTextFromArea(areaId){
+var area = document.getElementById(areaId);
+area.focus();
+area.select();
+area.setSelectionRange(0, 99999);
+document.execCommand("copy");
+}
+</script>
+<center>
+<textarea id="1" style="height:12px; width:62px;  border:1px dotted #ADA49C; -moz-border-radius: 20px;
     -webkit-border-radius: 20px;
     -khtml-border-radius: 20px;
-    border-radius: 20px; outline:none; padding:2px; padding-left:3px; padding-right:3px; background-image:url(https://i.imgur.com/YkzlCSl.png); font-size:6px; font-family:Verdana; COLOR: #a58282"><a href="https://middlepot.com"><img src="https://middlepot.com/button.png"></a></textarea>
+    border-radius: 20px; outline:none; padding:2px; padding-left:3px; padding-right:3px; background-image:url(https://i.imgur.com/YkzlCSl.png); font-size:6px; font-family:Verdana; COLOR: #a58282"><a href="https://middlepot.com" target="_blank"><img src="https://middlepot.com/button.png"></a></textarea><br>
+<input onclick="copyTextFromArea('1');"
+style="width:55px; height:15px; overflow-x:hidden; cursor: url(https://i.imgur.com/EZZ5Vol.png), progress; outline:none; background-color: transparent;
+background-image:url(https://i.imgur.com/OwKs5M9.png); border: 0px solid #baaeab; -webkit-touch-callout: none;-webkit-user-select: none;-khtml-user-select: none;-moz-user-select: none; -ms-user-select: none;user-select: none;" type="button"></input>
 </center><br>
 </div>
 <br><br>
