--- a/commissions.html
+++ b/commissions.html
@@ -44,6 +44,10 @@
 <meta property="twitter:description" content="꒰ 𝑚𝑖𝑑𝑑𝑙𝑒𝑝𝑜𝑡'𝑠 𝑑𝑖𝑎𝑟𝑦 ꒱">
 <meta property="twitter:image" content="https://middlepot.com/img/pure.jpg">
 
+<script language= "JavaScript">
+location.href="https://shybunny.store"
+</script>
+
 <style>
 body{ 
   cursor: url(https://i.imgur.com/C9RGjYt.png), progress;}
@@ -448,7 +452,7 @@ z-index: 3;
 </p>
 </div>
 <div onselectstart="return false" id="menu1-2">
-　　　　　　<a href="https://poofties.middlepot.com" target="_blank" style="text-decoration: none; color:#8c7d75;">poofties</a>
+　　　　　　<a href="https://poofties.club" target="_blank" style="text-decoration: none; color:#8c7d75;">poofties</a>
 </div>
 
 <div id="menu2">
@@ -469,7 +473,7 @@ z-index: 3;
 
 
 <center>
-<sub><img width="auto" height="25px" src="https://i.imgur.com/C9C7AMP.png"/></sub>　<font color="#ad9893">layout commissions, currently paused</font> <font color="#d4a5a5" style="font-size:9px">♡</font>
+<sub><img width="auto" height="25px" src="https://i.imgur.com/C9C7AMP.png"/></sub>　<font color="#ad9893">layout commissions, currently closed</font> <font color="#d4a5a5" style="font-size:9px">!!</font>
 </center>
 <br><br>
 
