--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@ z-index: 3;
 </p>
 </div>
 <div onselectstart="return false" id="menu1-2">
-　　　　　　<a href="https://poofties.middlepot.com" target="_blank" style="text-decoration: none; color:#8c7d75;">poofties</a>
+　　　　　　<a href="https://poofties.club" target="_blank" style="text-decoration: none; color:#8c7d75;">poofties</a>
 </div>
 
 <div id="menu2">
@@ -474,24 +474,24 @@ z-index: 3;
 <div style="line-height: 5px"><br></div>
 <div style="line-height: 10px"><center><sub><sub><img src="https://i.imgur.com/2Ntnpfr.gif"></sub></sub> ‌ <font color="#cfabab" style="font-size:10px;">updates</font> ‌ <sub><sub><img src="https://i.imgur.com/fy4LEng.gif"></sub></sub></center>
 <br></div>
+　　03.04 <sub><img src="https://i.imgur.com/hqVxKBX.png"></sub> url on: <a href="/shybunny" style="text-decoration: none;"><font color="#DFB7B7">/shybunny</font></a><br>
+　　03.04 <sub><img src="https://i.imgur.com/0kEyEmA.png"></sub> url on: <a href="/poofties" style="text-decoration: none;"><font color="#DFB7B7">/poofties</font></a><br>
 　　02.25 <sub><img src="https://i.imgur.com/hqVxKBX.png"></sub> tips on: <a href="/help" style="text-decoration: none;"><font color="#DFB7B7">/help</font></a><br>
 　　02.25 <sub><img src="https://i.imgur.com/0kEyEmA.png"></sub> photos on: <a href="/fashion" style="text-decoration: none;"><font color="#DFB7B7">/fashion</font></a><br>
 　　02.24 <sub><img src="https://i.imgur.com/hqVxKBX.png"></sub> materials on: <a href="/sozai" style="text-decoration: none;"><font color="#DFB7B7">/sozai</font></a><br>
-　　02.22 <sub><img src="https://i.imgur.com/0kEyEmA.png"></sub> entry on: <a href="/status" style="text-decoration: none;"><font color="#DFB7B7">/status</font></a><br>
-　　02.08 <sub><img src="https://i.imgur.com/hqVxKBX.png"></sub> update on: <a href="/portfolio" style="text-decoration: none;"><font color="#DFB7B7">/portfolio</font></a><br>
 </div>
 </center>
 
 <br>
 
-<font family = "Verdana"><font style="font-size:8px;"><font color="#cea9a9">since</font><font color="#c18f8f"> *</font><font color="#b7a1a1"> 2017 . august . 16</font><br><font color="#cea9a9">last update</font><font color="#c18f8f"> *</font><font color="#b7a1a1"> 2022 . february . 25</font></font></font>
+<font family = "Verdana"><font style="font-size:8px;"><font color="#cea9a9">since</font><font color="#c18f8f"> *</font><font color="#b7a1a1"> 2017 . august . 16</font><br><font color="#cea9a9">last update</font><font color="#c18f8f"> *</font><font color="#b7a1a1"> 2022 . march . 04</font></font></font>
 <div style="line-height: 13px"><br><br></div>
-
-<font family = "Verdana"><font style="font-size:8px;"><font color="#d8c0ad">( </font><font color="#efb8b8">♡</font><a id="linkzinho" href="/tips"><font color="#b7a596"> send me a little tip </font></a><font color="#efb8b8">♡</font><font color="#d8c0ad"> )</font></font></font>
+<div style="line-height: 10px">
+<font family = "Verdana"><font style="font-size:8px;"><font color="#ebc3c3" style="font-size:10px;">꒰ ‌</font><a id="linkzinho" href="/tips"><font color="#b7a596"> send me a little tip </font></a><font color="#ebc3c3" style="font-size:10px;">‌ ꒱</font></font></font>
 <br><br>
-<font family = "Verdana"><font style="font-size:8px;"><font color="#d8c0ad">( </font><font color="#efb8b8">♡</font><a id="linkzinho" href="/commissions"><font color="#c48f8f"> website commissions here </font></a><font color="#efb8b8">♡</font><font color="#d8c0ad"> )</font></font></font>
+<font family = "Verdana"><font style="font-size:8px;"><font color="#ebc3c3" style="font-size:10px;">꒰ ‌</font><a id="linkzinho" href="https://myfluffy.life"><font color="#ccabab"> play my online game </font></a><font color="#ebc3c3" style="font-size:10px;">‌ ꒱</font></font></font>
 <br><br>
-<font family = "Verdana"><font style="font-size:8px;"><font color="#d8c0ad">( </font><font color="#efb8b8">♡</font><a id="linkzinho" href="https://shybunny.middlepot.com" target="_blank"><font color="#c9a5a5"> visit my online store </font></a><font color="#efb8b8">♡</font><font color="#d8c0ad"> )</font></font></font>
+<font family = "Verdana"><font style="font-size:8px;"><font color="#ebc3c3" style="font-size:10px;">꒰ ‌</font><a id="linkzinho" href="https://shybunny.store" target="_blank"><font color="#c9a5a5"> visit my craft store </font></a><font color="#ebc3c3" style="font-size:10px;">‌ ꒱</font></font></font></div>
 
 <div style="line-height: 13px"><br><br></div>
 <font color="#c4ae9d">welcome to my safe corner on the internet !<br>
