--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@ z-index: 3;
 <div style="line-height: 10px">
 <font family = "Verdana"><font style="font-size:8px;"><font color="#ebc3c3" style="font-size:10px;">꒰ ‌</font><a id="linkzinho" href="/tips"><font color="#b7a596"> send me a little tip </font></a><font color="#ebc3c3" style="font-size:10px;">‌ ꒱</font></font></font>
 <br><br>
-<font family = "Verdana"><font style="font-size:8px;"><font color="#ebc3c3" style="font-size:10px;">꒰ ‌</font><a id="linkzinho" href="https://myfluffy.life"><font color="#ccabab"> play my online game </font></a><font color="#ebc3c3" style="font-size:10px;">‌ ꒱</font></font></font>
+<font family = "Verdana"><font style="font-size:8px;"><font color="#ebc3c3" style="font-size:10px;">꒰ ‌</font><a id="linkzinho" href="https://myfluffy.life" target="_blank"><font color="#ccabab"> play my online game </font></a><font color="#ebc3c3" style="font-size:10px;">‌ ꒱</font></font></font>
 <br><br>
 <font family = "Verdana"><font style="font-size:8px;"><font color="#ebc3c3" style="font-size:10px;">꒰ ‌</font><a id="linkzinho" href="https://shybunny.store" target="_blank"><font color="#c9a5a5"> visit my craft store </font></a><font color="#ebc3c3" style="font-size:10px;">‌ ꒱</font></font></font></div>
 
