--- a/recommended.html
+++ b/recommended.html
@@ -479,13 +479,11 @@ z-index: 3;
 <div style="line-height:6px;">
 	
 <center>
+<img src="https://i.imgur.com/WoYT1el.png"><br><br><br>
 
-<img src="https://i.imgur.com/WoYT1el.png"><br><br>
-<br>
-<center><a href="https://web.archive.org/web/20080702000153/http://princessportal.com/the-princess-code/" target="_blank"><img src="https://i.imgur.com/tcl2qna.gif"></a></center>
-<br><br><br>
+<a href="https://web.archive.org/web/20080702000153/http://princessportal.com/the-princess-code/" target="_blank"><img width="88px" height="auto" src="https://i.imgur.com/tcl2qna.gif"></a>
 
-<a href="https://pompon.neocities.org" target="_blank"><img src="https://i.imgur.com/vaXnzqN.gif"></a>
+　　‌‌<br><br><a href="https://pompon.neocities.org" target="_blank"><img src="https://i.imgur.com/vaXnzqN.gif"></a>
 　<a href="https://sanhyo.neocities.org" target="_blank"><img src="https://i.imgur.com/VAuDFkt.gif"></a>
 　<a href="https://ratpilled.neocities.org" target="_blank"><img src="https://i.imgur.com/AzvzqGz.gif"></a>
 
