--- a/blog.html
+++ b/blog.html
@@ -856,7 +856,7 @@ as you can imagine, that's why i'm delaying my blog posts a lot .. <sub>🖋</su
 i want to show you fluffies all i have been working on, but then right after finishing one thing i have another one and another + we are pretty assertive about clearing the bug list completely ( and we managed to do so !! but of course new ones always appear with new content, that's okay ) .
 so, this post will be LONG, as i not only have lots of stuff to show but also lots to talk about with you <font color="#d3a5a5" style="font-size:11px;">♡</font>
 
-i am grateful for seeing that my fluffy life has reached top 50 on all platforms ( even though it's still so small ??? ) , and perhaps for coincidence, my <a id="linkbjinho" href="https://picrew.me/image_maker/619666" target="_blank">picrew game</a>, and my line <a id="linkbjinho" href="https://store.line.me/emojishop/author/3648940" target="_blank">emojis</a> / <a id="linkbjinho" href="https://store.line.me/stickershop/author/2046603" target="_blank">stickers</a> / <a id="linkbjinho" href="https://store.line.me/themeshop/author/3648939" target="_blank">themes</a> have also reached the top recently again !!
+i am grateful for seeing that my fluffy life has reached top 50 on all platforms ( even though it's still so small ??? ) , and perhaps for coincidence, my <a id="linkbjinho" href="https://picrew.me/image_maker/619666" target="_blank">avatar maker</a> on picrew, and my <a id="linkbjinho" href="https://store.line.me/emojishop/author/3648940" target="_blank">emojis</a> / <a id="linkbjinho" href="https://store.line.me/stickershop/author/2046603" target="_blank">stickers</a> / <a id="linkbjinho" href="https://store.line.me/themeshop/author/3648939" target="_blank">themes</a> on line have also reached the top recently again !!
 it makes me feel proud and accomplished that my little game have been opening doors for me and all the poofties projects, for good <sub>🗝</sub>
 but unfortunately, for bad as well.. just a little bit.
 
@@ -2355,7 +2355,7 @@ xoxo <sub>💗</sub>
 hiii fluffies <sub>🐑</sub><br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
 first of all, thank you for the support i have received lately.. it's means so much to me, i can't put into words !!
 creating cute things is my passion, and i'm blessed to have others helping me to have my dreams come true. without this support it's hard to keep going, so i want to be here to motivate others and help too, as i can <sub>🌷</sub>
-i also wanted to thank you for using my picrew game. it made up to the "hot" section, for a brief moment, and it took me by surprise !!!
+i also wanted to thank you for using my picrew avatar maker. it made up to the "hot" section, for a brief moment, and it took me by surprise !!!
 i honestly wasn't expecting <font color="#bda4a4" style="font-size:8px;background-color:#fceded;letter-spacing:1px;border-radius: 10px;box-shadow: 0 0 5px #fceded;">///</font>
 because of that, some new people found me. if you're one of them, welcome !!
 i'm working hard to make more content now. i want to release my big game project on april, hopefully <font color="#d3a5a5" style="font-size:11px;">♡</font>
@@ -2384,9 +2384,9 @@ you can purchase those letter writing and sticker sets on the <a id="linkbjinho"
 <font size = 1><font color="#B1A69E">
 <br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
 i am already using those for writing letters to my friends, and i know it might sound silly, but i collect stationery since ever and now having my very own in the collection makes me incredibly happy <sub>💕</sub>
-after i finished editing the sets i thought of making some digital content as well, and i realized that i could make one more small dream come true : making my very own line stickers !!!
+after i finished editing the sets i thought of making some digital content as well, and i realized that i could make one more small dream come true : upload my very own stickers to line !!!
 many of my favorite artists have their own sets on line, and i always looked up to them .. could that be my chance to shine ? <font color="#d3a5a5" style="font-size:11px;">♡</font>
-i ended up not making only stickers but also emojis and themes. it took a while to edit everything properly, and i had to draw extra things too, but it was certainly worth it.
+i ended up not making only stickers but also emojis and themes. it took a while to edit everything properly, and i had to draw extra things too, but it was certainly worth it. i'm so happy mine got approved !!
 if you use the line app, please take a look at them <a id="linkbjinho" href="https://store.line.me/stickershop/author/2046603" target="_blank">here</a>, <a id="linkbjinho" href="https://store.line.me/emojishop/author/3648940" target="_blank">here</a> & <a id="linkbjinho" href="https://store.line.me/themeshop/author/3648939" target="_blank">here</a> !!
 </pre>
 <br><br>
@@ -2461,7 +2461,7 @@ because of them, i have been able to play lots of games i haven't saved on my pc
 well, this month has been so so so busy for me.. i got a lot of work and made progress on many projects..
 i admit besides being very thankful for everything, i didn't manage my time very well and now i'm feeling stressed, so i'll try to take this next week to rest !!
 
-for showing you today i have this picrew dress up game i am very proud of <sub>💝</sub>
+for showing you today i have this picrew avatar maker i am very proud of <sub>💝</sub>
 making one of these have been a little dream of mine for quite some time now, as i love playing with other artists' games..
 i'm not very used to draw humans, but i tried my best and i hope you like it <font color="#bda4a4" style="font-size:8px;background-color:#fceded;letter-spacing:1px;border-radius: 10px;box-shadow: 0 0 5px #fceded;">///</font>
 please click the preview to open the link :
